--- a/package.json
+++ b/package.json
@@ -20,5 +20,24 @@
   "bugs": {
     "url": "https://github.com/dark5un/fr0stbyte/issues"
   },
-  "homepage": "https://github.com/dark5un/fr0stbyte"
+  "homepage": "https://github.com/dark5un/fr0stbyte",
+  "devDependencies": {
+    "should": "^4.0.4",
+    "mocha": "^1.21.4",
+    "supertest": "^0.13.0",
+    "nodemon": "^1.2.1"
+  },
+  "dependencies": {
+    "express": "^4.9.4",
+    "connect-timeout": "^1.3.0",
+    "response-time": "^2.1.0",
+    "compression": "^1.1.0",
+    "errorhandler": "^1.2.0",
+    "body-parser": "^1.8.3",
+    "csurf": "^1.6.1",
+    "serve-static": "^1.6.2",
+    "request": "^2.44.0",
+    "mongoose": "^3.8.16",
+    "sequelize": "^2.0.0-rc1"
+  }
 }
