--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A(n) (other) lightweight web (and not only) framework",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon"
   },
   "repository": {
     "type": "git",
@@ -28,16 +29,24 @@
     "nodemon": "^1.2.1"
   },
   "dependencies": {
-    "express": "^4.9.4",
-    "connect-timeout": "^1.3.0",
-    "response-time": "^2.1.0",
-    "compression": "^1.1.0",
-    "errorhandler": "^1.2.0",
+    "async": "^0.9.0",
     "body-parser": "^1.8.3",
+    "compression": "^1.1.0",
+    "connect-timeout": "^1.3.0",
     "csurf": "^1.6.1",
-    "serve-static": "^1.6.2",
-    "request": "^2.44.0",
+    "errorhandler": "^1.2.0",
+    "express": "^4.9.4",
+    "helmet": "^0.4.1",
+    "jade": "^1.7.0",
+    "md5": "^1.0.0",
+    "method-override": "^2.2.0",
+    "moment": "^2.8.3",
     "mongoose": "^3.8.16",
-    "sequelize": "^2.0.0-rc1"
+    "morgan": "^1.3.2",
+    "node-uuid": "^1.4.1",
+    "request": "^2.44.0",
+    "response-time": "^2.1.0",
+    "sequelize": "^2.0.0-rc1",
+    "serve-static": "^1.6.2"
   }
 }
