--- a/package.json
+++ b/package.json
@@ -23,17 +23,17 @@
   },
   "homepage": "https://github.com/dark5un/fr0stbyte",
   "devDependencies": {
-    "should": "^4.0.4",
+    "dot": "^1.0.2",
     "mocha": "^1.21.4",
-    "supertest": "^0.13.0",
-    "nodemon": "^1.2.1"
+    "nodemon": "^1.2.1",
+    "should": "^4.0.4",
+    "supertest": "^0.13.0"
   },
   "dependencies": {
     "async": "^0.9.0",
     "body-parser": "^1.8.3",
     "compression": "^1.1.0",
     "connect-timeout": "^1.3.0",
-    "csurf": "^1.6.1",
     "errorhandler": "^1.2.0",
     "express": "^4.9.4",
     "helmet": "^0.4.1",
