--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "async": "^0.9.0",
     "body-parser": "^1.8.3",
+    "bull": "^0.1.10",
     "compression": "^1.1.0",
     "connect-timeout": "^1.3.0",
     "errorhandler": "^1.2.0",
