--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/dark5un/fr0stbyte",
   "devDependencies": {
     "dot": "^1.0.2",
+    "expect.js": "^0.3.1",
     "mocha": "^1.21.4",
     "nodemon": "^1.2.1",
     "should": "^4.0.4",
@@ -31,7 +32,7 @@
   },
   "dependencies": {
     "async": "^0.9.0",
-    "body-parser": "^1.8.3",
+    "body-parser": "git+ssh://git@github.com:dark5un/body-parser.git",
     "bull": "^0.1.10",
     "compression": "^1.1.0",
     "connect-timeout": "^1.3.0",
@@ -43,11 +44,13 @@
     "method-override": "^2.2.0",
     "moment": "^2.8.3",
     "mongoose": "^3.8.16",
+    "mongoskin": "^1.4.4",
     "morgan": "^1.3.2",
     "node-uuid": "^1.4.1",
     "request": "^2.44.0",
     "response-time": "^2.1.0",
     "sequelize": "^2.0.0-rc1",
-    "serve-static": "^1.6.2"
+    "serve-static": "^1.6.2",
+    "type-is": "^1.5.2"
   }
 }
