--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "bull": "^0.1.10",
     "compression": "^1.1.0",
     "connect-timeout": "^1.3.0",
+    "cron": "^1.0.5",
     "errorhandler": "^1.2.0",
     "express": "^4.9.4",
     "helmet": "^0.4.1",
