--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "supertest": "^0.13.0"
   },
   "dependencies": {
+    "apn": "^1.6.2",
     "async": "^0.9.0",
     "body-parser": "git+ssh://git@github.com:dark5un/body-parser.git",
     "bull": "^0.1.10",
@@ -47,6 +48,7 @@
     "mongoose": "^3.8.16",
     "mongoskin": "^1.4.4",
     "morgan": "^1.3.2",
+    "node-gcm": "^0.9.12",
     "node-uuid": "^1.4.1",
     "request": "^2.44.0",
     "response-time": "^2.1.0",
